Fix spacing between site maps and mods test

--- a/mf_web/volumes/htdocs/sass/elements/site-maps-and-mods-tests.scss
+++ b/mf_web/volumes/htdocs/sass/elements/site-maps-and-mods-tests.scss
@@ -9,9 +9,9 @@
         > .list {
             display: flex;
             flex-wrap: wrap;
-            width: 100%;
             
             > .item {
+                overflow: hidden;
                 flex: 0 0 50%;
                 height: 176px;
             }
